# pyi4thrift

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pyi4thrift/: __init__.py  __main__.py  __version__.py  convert.py  exceptions.py  main.py  peg.py
tests/: example_thrift.pyi
