[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "pyi4thrift"
dynamic = ["version"]
authors = [
  { name="yanweizhi", email="yanweizhi@bytedance.com" },
]
maintainers = [
  { name="sagewe", email="sagewe@fastmail.com" },
]
description = "convert thrift to pyi"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "lark>=1.1.9,<2.0.0",
  "thriftpy2>=0.4.2,<1.0.0",
  "yapf>=0.22.0,<1.0.0",
]
classifiers = [
        # Trove classifiers
        # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
        'Intended Audience :: Developers',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
    ]

[project.optional-dependencies]
dev = [
  "flake8>=6.1.0,<7.0.0",
  "mypy>=1.7.0,<2.0.0",
  "pytest>=7.4.0,<8.0.0",
  "pytest-cov>=4.1.0,<5.0.0",
  "tox>=4.11.0,<5.0.0",
]

[project.scripts]
thrift2pyi = "pyi4thrift.main:main"
pyi4thrift = "pyi4thrift.main:main"

[project.urls]
"Homepage" = "https://github.com/sagewe/pyi4thrift"
"Bug Tracker" = "https://github.com/sagewe/pyi4thrift/issues"

[tool.hatch.version]
path = "src/pyi4thrift/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyi4thrift"]
include = [
  "src/pyi4thrift/py.typed",
  "src/pyi4thrift/*.pyi",
]
